# elementary-cellular-automata

./: .gitignore  CMakeLists.txt  README.md
src/: automaton.cpp  automaton.h  main.cpp
